# rang

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  index.html  meson.build  params.json
include/: rang.hpp
test/: RCBTest.cpp  colortest.cpp  meson.build  test.cpp  visualTest.cpp  visualTest_windows.cpp
